# c-http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ctrlc_callback.c  ctrlc_callback.h  hello.c  my_file.c  pause.h  server.c  style_guide.c
include/: ctrlc_callback.h  errors.h  return_code.h  return_file.h  server.h
src/backend/: ctrlc_callback.c  ctrlc_callback.h  errors.c  pause.c  return_code.c  return_file.c  server.c
src/frontend/: front_page.html  index.html  main_page.html  styles.css
src/frontend/bootstrap/js/: c-http-server-sea - Shortcut.lnk
src/frontend/example_website/: index.html  index1.html  index2.html  index3.html  styles.css
